--- a/style.scss
+++ b/style.scss
@@ -769,24 +769,9 @@ li {
     }
 }
 
-// .icon_bg,
-// .icon_fig {
-//     transition: all 0.3s;
-// }
-
-// .icon:hover .icon_bg {
-//     fill: #F16D7F;
-// }
-
-// .icon:hover .icon_fig {                 
-//     fill: #FFFFFF;
-// }
-
-
-
 // --------------------------
 // продвинутый. ДЗ 1   -  ниже
-// созданиt страницы товара каталога
+// создание страницы товара каталога
 .top-head {
     background: #f8f3f4;
     padding-top: 60px;
@@ -817,10 +802,6 @@ li {
         line-height: 14px;
         color: #636363;
         transition: all 0.3s;
-        //     &_site { был модификатор у крайней ссылки
-        //     font-weight: 700;
-        //     color: $colorSelectSite;
-        // }
     }
     &__link:not(:last-child)::after {
         content: '/';
@@ -832,7 +813,7 @@ li {
         line-height: 17px;
         color: #636363;
     }
-    // найти последний эл-т списка, внутри к-го есть ссылка
+
     &__link:last-child .breadcrumbs__link {
         font-weight: 700;
         color: $colorSelectSite;
@@ -1134,7 +1115,7 @@ summary::-webkit-details-marker {
     justify-content: flex-start;
     align-items: center;
     gap: 28px;
-    transition: all 0.3s;       //////////
+    transition: all 0.3s;
 
     &__details {
         position: relative;
@@ -1143,7 +1124,7 @@ summary::-webkit-details-marker {
         color: $colorSelectSite;
     }
     &__details[open] path {
-        fill: $colorSelectSite;     ///////
+        fill: $colorSelectSite;
     }
 
     &__summary {
@@ -1161,9 +1142,6 @@ summary::-webkit-details-marker {
         &:hover {
             color: $colorSelectSite;
         }
-        // &:hover .sort__summary path{
-        //     fill: $colorSelectSite;
-        // }
     }
 
     &__svg:hover path { 
@@ -1475,7 +1453,6 @@ summary::-webkit-details-marker {
         padding-left: 16px;
         box-sizing: border-box;
         border: 1px solid #A4A4A4;
-        // color: #222;
         font-size: 13px;
         font-style: normal;
         font-weight: 300;
@@ -1485,18 +1462,6 @@ summary::-webkit-details-marker {
             color: #B1B1B1;
         }
     }
-
-    // &__button {
-    //     width: 101px;
-    //     height: 35px;
-    //     justify-content: center;
-    //     align-items: center;
-    //     color: #4A4A4A;
-    //     font-size: 11px;
-    //     font-style: normal;
-    //     font-weight: 300;
-    //     line-height: normal;
-    // }
 }
 
 .checkout {
@@ -1507,13 +1472,12 @@ summary::-webkit-details-marker {
     padding-top: 39px;
     padding-right: 34px;
     padding-bottom: 42px;
-    padding-left: 43px;  // ???
+    padding-left: 43px;
     box-sizing: border-box;
     background-color: #F5F3F3;
     margin-bottom: 96px;
 
     &__total {
-        // width: 275px;
         display: flex;
         flex-direction: column;
         align-items: flex-end;
@@ -1572,10 +1536,6 @@ summary::-webkit-details-marker {
     }
 }
 
-
-
-
-
 @media (max-width: 1024px) {
     .center {
         padding-left: calc(50% - 376px);
@@ -1594,8 +1554,8 @@ summary::-webkit-details-marker {
         }
 
         &__info {
-            padding-top: 120px; /*138px;*/
-            padding-bottom: 120px; /*151px;*/
+            padding-top: 120px;
+            padding-bottom: 120px;
             padding-left: 20px;
         }
 
@@ -1708,13 +1668,13 @@ summary::-webkit-details-marker {
             height: 61px;
         }
         &__title {
-            font-size: 38px;  /*38*/
-            line-height: 46px;   /*46*/
+            font-size: 38px; 
+            line-height: 46px;
         }
     
         &__subtitle {
-            font-size: 20px;  /*20*/
-            line-height: 24px;  /*24*/
+            font-size: 20px;
+            line-height: 24px; 
         }
     }
 
@@ -1827,17 +1787,3 @@ summary::-webkit-details-marker {
         padding-left: 0;
     }
 }
-
-
-
-
-// ---------- не помню, что это. Разобраться---
-// ???
-.prod_bekgr {
-    background-color: #F7E4E2;
-}
-
-//   ???
-// .img {
-//     max-width: 100%;
-// }
