--- a/style.scss
+++ b/style.scss
@@ -771,7 +771,7 @@ li {
 
 // --------------------------
 // продвинутый. ДЗ 1   -  ниже
-// создание страницы товара каталога
+// созданиt страницы товара каталога
 .top-head {
     background: #f8f3f4;
     padding-top: 60px;
@@ -802,6 +802,10 @@ li {
         line-height: 14px;
         color: #636363;
         transition: all 0.3s;
+        //     &_site { был модификатор у крайней ссылки
+        //     font-weight: 700;
+        //     color: $colorSelectSite;
+        // }
     }
     &__link:not(:last-child)::after {
         content: '/';
@@ -813,7 +817,7 @@ li {
         line-height: 17px;
         color: #636363;
     }
-
+    // найти последний эл-т списка, внутри к-го есть ссылка
     &__link:last-child .breadcrumbs__link {
         font-weight: 700;
         color: $colorSelectSite;
@@ -1115,7 +1119,7 @@ summary::-webkit-details-marker {
     justify-content: flex-start;
     align-items: center;
     gap: 28px;
-    transition: all 0.3s;
+    transition: all 0.3s;       //////////
 
     &__details {
         position: relative;
@@ -1124,7 +1128,7 @@ summary::-webkit-details-marker {
         color: $colorSelectSite;
     }
     &__details[open] path {
-        fill: $colorSelectSite;
+        fill: $colorSelectSite;     ///////
     }
 
     &__summary {
@@ -1142,6 +1146,9 @@ summary::-webkit-details-marker {
         &:hover {
             color: $colorSelectSite;
         }
+        // &:hover .sort__summary path{
+        //     fill: $colorSelectSite;
+        // }
     }
 
     &__svg:hover path { 
@@ -1263,6 +1270,7 @@ summary::-webkit-details-marker {
         display: flex;
         flex-direction: column;
         gap: 57px;
+        padding-top: 113px;
     }
 }
 
@@ -1420,9 +1428,8 @@ summary::-webkit-details-marker {
 }
 
 .address {
-    margin-top: 113px;
     width: 360px;
-    height: 272px;
+    // height: 272px;
     padding: 0;
     box-sizing: border-box;
     display: flex;
@@ -1441,7 +1448,7 @@ summary::-webkit-details-marker {
 
     &__input {
         width: 360px;
-        height: 175px;
+        // height: 175px;
         display: flex;
         flex-direction: column;
         gap: 20px;
@@ -1453,15 +1460,28 @@ summary::-webkit-details-marker {
         padding-left: 16px;
         box-sizing: border-box;
         border: 1px solid #A4A4A4;
+        // color: #222;
         font-size: 13px;
         font-style: normal;
         font-weight: 300;
         line-height: normal;
     
-        &_town {
+        &_color {
             color: #B1B1B1;
         }
     }
+
+    // &__button {
+    //     width: 101px;
+    //     height: 35px;
+    //     justify-content: center;
+    //     align-items: center;
+    //     color: #4A4A4A;
+    //     font-size: 11px;
+    //     font-style: normal;
+    //     font-weight: 300;
+    //     line-height: normal;
+    // }
 }
 
 .checkout {
@@ -1472,12 +1492,13 @@ summary::-webkit-details-marker {
     padding-top: 39px;
     padding-right: 34px;
     padding-bottom: 42px;
-    padding-left: 43px;
+    padding-left: 43px;  // ???
     box-sizing: border-box;
     background-color: #F5F3F3;
     margin-bottom: 96px;
 
     &__total {
+        // width: 275px;
         display: flex;
         flex-direction: column;
         align-items: flex-end;
@@ -1536,6 +1557,108 @@ summary::-webkit-details-marker {
     }
 }
 
+// продвинутый ДЗ №4 ниже (страница регистрации):
+.registration {
+    display: flex;
+    gap: 128px;
+    padding-top: 64px;
+    padding-bottom: 96px;
+    box-sizing: border-box;
+    background: #FFF;
+
+    &__left {
+        width: 360px;
+        box-sizing: border-box;
+    }
+
+    &__right {
+        width: 652px;
+        height: 334px;
+        box-sizing: border-box;
+        display: flex;
+        flex-direction: column;
+        gap: 22px;
+        color: #000;
+        font-family: Lato;
+        font-size: 24px;
+        font-style: normal;
+        font-weight: 300;
+        line-height: normal;
+    }
+
+    &__text {
+        padding-top: 15px;
+        padding-bottom: 39px;
+        color: #B1B1B1;
+        font-size: 13px;
+        font-style: normal;
+        font-weight: 300;
+        line-height: normal;
+    }
+    &__button {
+        width: 167px;
+        height: 50px;
+        box-sizing: border-box;
+        border: 1px solid $colorSelectSite;
+        background-color: $colorSelectSite;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 20px;
+        color: #FFF;
+        font-size: 14px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: normal;
+        transition: all 0.4s;
+
+        &:hover {
+            color: $colorSelectSite;
+            background-color: #fff;
+        }
+
+        &:hover .registration__svg path {
+            fill: $colorSelectSite;
+        }
+    }
+
+    &__gender {
+        width: 132px;
+        height: 17px;
+        display: flex;
+        justify-content: space-between;
+        gap: 20px;
+        margin-top: 31px;
+        margin-bottom: 33px;
+        color: #000;
+        font-size: 11px;
+        font-style: normal;
+        font-weight: 300;
+        line-height: normal;
+        &_inp {
+            display: flex;
+            flex-wrap: nowrap;
+            gap: 10px;
+            align-items: flex-end;
+        }
+    }
+
+    &__benefits {
+        display: flex;
+        flex-direction: column;
+        gap: 16px;
+    }
+
+    &__benef::before {
+        content: url(img/reg.svg);
+        padding-right: 22px;
+    }
+}
+
+
+
+
+
 @media (max-width: 1024px) {
     .center {
         padding-left: calc(50% - 376px);
@@ -1554,8 +1677,8 @@ summary::-webkit-details-marker {
         }
 
         &__info {
-            padding-top: 120px;
-            padding-bottom: 120px;
+            padding-top: 120px; /*138px;*/
+            padding-bottom: 120px; /*151px;*/
             padding-left: 20px;
         }
 
@@ -1668,13 +1791,13 @@ summary::-webkit-details-marker {
             height: 61px;
         }
         &__title {
-            font-size: 38px; 
-            line-height: 46px;
+            font-size: 38px;  /*38*/
+            line-height: 46px;   /*46*/
         }
     
         &__subtitle {
-            font-size: 20px;
-            line-height: 24px; 
+            font-size: 20px;  /*20*/
+            line-height: 24px;  /*24*/
         }
     }
 
