--- a/style.scss
+++ b/style.scss
@@ -133,6 +133,16 @@ li {
     list-style-type: none;
 }
 
+// input:invalid {
+//     border: 1px solid #A4A4A4 ;
+// }
+// input:invalid:required {
+//     border: 1px solid $colorSelectSite;
+// }
+// input:valid {
+//     border: 1px solid $colorSelectSite;
+// }
+
 .center {
     padding-left: calc(50% - 570px);
     padding-right: calc(50% - 570px);
@@ -1165,7 +1175,7 @@ summary::-webkit-details-marker {
         flex-direction: column;
         justify-content: space-between;
         gap: 6px;
-        z-index: 1;
+        z-index: 10;
         top: 22px;
         left: -9px;
     }
@@ -1458,6 +1468,7 @@ summary::-webkit-details-marker {
         width: 360;
         height: 45px;
         padding-left: 16px;
+        padding-right: 16px;
         box-sizing: border-box;
         border: 1px solid #A4A4A4;
         // color: #222;
@@ -1983,7 +1994,6 @@ summary::-webkit-details-marker {
     }
 
     /*дз 9*/
-
     .advantages {
         padding-top: 48px;
         padding-bottom: 81px;
@@ -1994,8 +2004,6 @@ summary::-webkit-details-marker {
             padding-right: 0px; 
             padding-left: 0px;
         }
-
-
     }
 
     .subscription-background {
@@ -2049,4 +2057,269 @@ summary::-webkit-details-marker {
     .copyright__text {
         padding-left: 0;
     }
+
+    // дз 6 продвинутый - все 5 страниц для планшета
+    .top-head {
+        padding-top: 24px;
+        padding-bottom: 46px;
+        gap: 32px;
+        flex-direction: column;
+    }
+    // каталог
+    .filter-sort {
+        // padding-bottom: 32px;
+        // padding-left: 8px;
+        // padding-right: 8px;
+        padding: 0 8px;
+        gap: 0;
+
+    }
+
+    .filter-box {
+        width: 99px;
+        height: 100%;
+    }
+
+    .filter {
+        width: 360px;  // 360px
+        padding: 24px 0 32px;
+        
+        &__summary {
+            width: 99px;
+        }
+
+        &__summary svg {
+            width: 37.5px;
+            height: 25px;
+        }
+
+        &__heading {
+            display: none;
+        }
+    }
+
+    .sort {
+        width: 260px;
+        height: 100%;
+        padding-top: 26px;
+        gap: 24px;
+        align-items: start;
+
+        &__heading {
+            font-size: 12px;
+        }
+
+        &__summary {
+            gap: 9px;
+        }
+
+        &__summary svg {
+            width: 10px;
+        }
+    }
+
+    .catalog-products {
+        &__box {
+            grid-template-columns: repeat(1, 360px);
+        }
+    }
+    //корзина
+    .top-cart {
+        justify-content: center;
+    }
+
+    .content-cart {
+        gap: 48px;
+        padding-left: 8px;
+        padding-right: 8px;
+        justify-content: center;
+
+        &__products {
+            padding-top: 39px;
+            gap: 30px;
+            align-items: center;
+        }
+
+        &__address {
+            padding-top: 0;
+            padding-bottom: 96px;
+            gap: 9px;
+            flex-direction: column;
+            flex-wrap: wrap;
+        }
+    }
+
+    .cart-prods {
+        gap: 32px;
+    }
+
+    .cart-product {
+        width: 358px;
+        height: 188px;
+
+        &__img {
+            width: 143px;
+        }
+
+        &__info {
+            width: 214px;
+            padding-top: 14px;
+            padding-left: 17px;
+            padding-right: 53px;
+            display: flex;
+            flex-direction: column;
+            gap: 4px;
+            position: relative;
+        }
+
+        &__header {
+            min-height: 35px;
+            margin-bottom: 25px;
+            font-size: 16px;
+        }
+
+        &__items {
+            width: 119px;
+            height: 76px;
+            gap: 4px;
+        }
+
+        &__text {
+            font-size: 14px;
+        }
+
+        &__number {
+            width: 24px;
+            height: 15px;
+            font-size: 10px;
+            padding-left: 9px;
+        }
+
+        &__close {
+            top: 17px;
+            right: 12px;
+            & svg {
+                width: 10px;
+                height: 11px;
+            }
+        }
+    }
+
+    .cart-buttons {
+        gap: 9px;
+    }
+
+    .cart-btn {
+        width: 175px;
+        height: 33px;
+        font-size: 12px;
+
+        &__address {
+            width: 101px;
+            height: 35px;
+        }
+    }
+
+    .addressb{
+        &__heading {
+
+        }
+    }
+    // регистрация
+    .registration {
+        padding-left: 8px;
+        padding-right: 8px;
+        padding-bottom: 100px;
+        flex-direction: column;
+        align-items: center;
+        gap: 40px;
+
+        &__left {
+            margin-left: 0;
+            // display: flex;
+            // flex-direction: column;
+            // justify-content: center;
+        }
+
+        &__right {
+            margin-right: 0;
+            font-size: 16px;
+        }
+    }
+    // продукт
+    .carousel {
+        height: 624px;
+        padding-left: 8px;
+        padding-right: 8px;
+        position: relative;
+        justify-content: center;
+
+
+        &__slide-left {
+            position: absolute;
+            top: 295px;
+            left: 8px;
+            z-index: 1;
+        }
+
+        &__slide-right {
+            position: absolute;
+            top: 295px;
+            right: 8px;
+            z-index: 1;
+        }
+
+        &__photo {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+
+            & img {
+                max-height: 454px;
+            }
+        }
+    }
+
+    .descript {
+        height: 600px;
+        padding-left: 8px;
+        padding-right: 8px;
+
+        &__box {
+            // width: 326px;
+        }
+
+        &__subtitle {
+            margin-bottom: 32px;
+        }
+
+        &__text {
+            width: 326px;
+        }
+
+        &__line {
+            width: 175px;
+            border-bottom: 2px solid #EAEAEA;
+            margin-top: 32px;
+            margin-bottom: 49px;
+        }
+
+        &__sort {
+            margin-bottom: 64px;
+        }
+
+        &__sort-header {
+            font-size: 10px;
+        }
+    }
+
+    .products-group {
+        grid-template-columns: repeat(1, 360px);
+        grid-template-rows: 1fr;
+        grid-auto-rows: auto;
+        overflow-y: visible;
+        gap: 8px;
+        margin-bottom: 64px;
+    }
+        
 }
